--- a/CSS/header.css
+++ b/CSS/header.css
@@ -1,8 +1,11 @@
 .header
 {
     display:flex;
-    justify-content: space-around;
+    height: 80px;
+    justify-content: space-between;
     align-items:center;
+    padding: 0px 24px;
+    box-shadow: rgba(0,0,0,0.08) 0px 1px 12px;
 }
 .logo, .search, .host{
     flex:none;
