--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,4 +6,15 @@
     background-color: lightgray;
     background-image:url('./Image/headerImage.jpg') no-repeat;
 }
-
+*{
+    box-sizing: border-box;
+}
+body{
+    color:rgb(34,34,34);
+    font-family: 'Circular Book';
+    margin:0;
+    font-size:14px;
+    letter-spacing: normal;
+    line-height: 18px;
+    -webkit-font-smooting:antialiased;
+}
