--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,13 +1,12 @@
-#top
-{
-    text-align: center;
-    max-width:1400px;
-    margin:0 auto;
-    background-color: lightgray;
-    background-image:url('./Image/headerImage.jpg') no-repeat;
-}
+
 *{
     box-sizing: border-box;
+}
+h1{
+    display: block;
+    font-size: 2em;
+
+    font-weight: bold;
 }
 body{
     color:rgb(34,34,34);
@@ -18,3 +17,7 @@ body{
     line-height: 18px;
     -webkit-font-smooting:antialiased;
 }
+.top{
+    padding:0 80px;
+}
+
