--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,7 +17,26 @@ body{
     line-height: 18px;
     -webkit-font-smooting:antialiased;
 }
-.top{
-    padding:0 80px;
+
+.navbar{
+    display:flex;
+    height: 80px;
+    justify-content: space-between;
+    align-items:center;
+    padding: 0px 24px;
+    box-shadow: rgba(0,0,0,0.08) 10px 1px 1px;
+ 
+
+}
+.first_navbar, .vertical_line{
+    flex:none;
+    padding:20px 30px;
 }
 
+
+
+.vertical_line{
+    top:0;
+    bottom: 0;
+    width: 1px;
+}
